<resources>
    <string name="app_name">WhatsSyntax</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chats">Chats</string>
    <string name="status">Status</string>
    <string name="calls">Calls</string>
    <string name="settings">Settings</string>
    <string name="profile_image">profile_image</string>
    <string name="call_status">call_status</string>
    <string name="hint_enter_message">hint_enter_message</string>
    <string name="send">Send\n</string>
    <string name="profile">profile</string>
    <string name="Name">YourName</string>
    <string name="Number">YourNumber</string>
    <string name="Save">SAVE</string>
    <string name="WhatsSyntax">WhatsSyntax</string>
    <string name="kontaktname">Kontaktname</string>
    <string name="datum_und_uhrzeit">Datum und Uhrzeit</string>
    <string name="Here_your_Message">Put here your Message</string>
    <string name="Enter_your_Message_here">"Enter your Message here ! "</string>
</resources>